# ivs-project-2

./: README.md  pubspec.yaml
.github/workflows/: rust.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/nekalkulacka/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/src/core/bloc/calculator/: calculator_state.dart  calculator_state.freezed.dart
lib/src/ui/pages/: main_page.dart
src/: Makefile
src/backend/: Cargo.toml
src/backend/icons/: icon.icns
src/backend/src/: main.rs  math.pest  parser.rs
src/frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/frontend/public/: glue.js  main.css  tailwind-input.css
src/frontend/src/: app.rs  main.rs
src/frontend/src/components/: display.rs  femboy_helper.rs  help_icon.rs  helper_avatar.rs  keypad.rs  keypad_button.rs  mod.rs  theme_switcher.rs
src/frontend/src/services/: state.rs  utils.rs
src/mathlib/: Cargo.toml
src/mathlib/src/: lib.rs
src/src-tauri/: tauri.conf.json
src/src-tauri/src/: main.rs
src/stddev/: Cargo.toml
src/stddev/src/: main.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
